# console-tally

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: canary.yml  daily.yml  deploy.yml  weekly.yml
data/: consoles.sqlite
data/manual/: baseline_first_party.json  last_gen_final.json  pc_handheld_estimates.json  steam_deck_estimates.json  xbox_estimates.json
data/normalized/: consoles.json  meta.json  regions.json
data/raw/famitsu/: 2026-04-14.json  2026-04-15.json  2026-04-16.json  2026-04-17.json  2026-04-18.json  2026-04-19.json  2026-04-20.json  2026-04-21.json  2026-04-22.json  2026-04-23.json  2026-04-24.json  2026-04-25.json  2026-04-26.json  2026-04-27.json  2026-04-28.json  2026-04-29.json  2026-04-30.json  2026-05-01.json  2026-05-02.json  2026-05-03.json  2026-05-04.json  2026-05-05.json  2026-05-06.json  2026-05-07.json  2026-05-08.json  2026-05-09.json  2026-05-10.json  2026-05-11.json  2026-05-12.json  2026-05-13.json  2026-05-14.json  2026-05-15.json  2026-05-16.json  2026-05-17.json  2026-05-18.json  2026-05-19.json  2026-05-20.json  2026-05-21.json  2026-05-22.json  2026-05-23.json  (+60 more)
data/raw/nintendo_ir/: 2026-04-14.json  2026-04-20.json  2026-04-27.json  2026-05-04.json  2026-05-11.json  (+10 more)
scrapers/: __init__.py  base.py  console_registry.py  famitsu.py  nintendo_ir.py  normalize.py  paths.py  rss_watchers.py  schema.py  sec_edgar.py  sony_ir.py  wikipedia.py
site/: astro.config.mjs  package-lock.json  package.json
tests/: test_canary.py  test_normalize.py  test_schema.py
(+145 files in other folders)
